--- a/_includes/giscus_comments.html
+++ b/_includes/giscus_comments.html
@@ -1,10 +1,11 @@
 <!-- https://giscus.app/ -->
-<script async src="https://giscus.app/client.js"
+<script src="https://giscus.app/client.js"
         data-repo="{{ site.giscus.repo }}"
         data-repo-id="{{ site.giscus.repo_id }}"
         data-category="{{ site.giscus.category }}"
         data-category-id="{{ site.giscus.category_id }}"
         data-mapping="{{ site.giscus.mapping }}"
+        data-strict="0"
         data-reactions-enabled="1"
         data-emit-metadata="0"
         data-input-position="{{ site.giscus.input_position }}"
